// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu it should match snapshot 1`] = `
<Provider>
  <Menu />
</Provider>
`;

exports[`MenuItem it should match snapshot 1`] = `
<Provider>
  <MenuItem />
</Provider>
`;

exports[`MenuList it should match snapshot 1`] = `""`;
